--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "framer-motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-is": "^19.2.0",
     "react-router-dom": "^7.9.4",
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.3.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
