--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@tailwindcss/vite": "^4.1.14",
+    "ant": "^0.0.0",
     "antd": "^5.27.6",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.24",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-is": "^19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.4",
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
