--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 VITE_API_BASE_URL=http://localhost:5000/api
+
+# ✅ Nếu dùng upload thẳng Cloudinary (Unsigned preset)
+VITE_CLOUDINARY_CLOUD_NAME=YOUR_CLOUD_NAME
+VITE_CLOUDINARY_UPLOAD_PRESET=YOUR_UNSIGNED_PRESET
+VITE_CLOUDINARY_FOLDER=melody/audio
